# YetAnotherHttpHandler

./: .editorconfig  .gitignore  .gitmodules  LICENSE  README.md  THIRD-PARTY-NOTICES  YetAnotherHttpHandler.sln  YetAnotherHttpHandler.sln.DotSettings  YetAnotherHttpHandler.slnx
.github/: dependabot.yaml
.github/workflows/: build-natives.yaml  build-natives.yml  build-push-and-pr.yaml  build-push-and-pr.yml  build-release.yaml  build-release.yml  build.yml
native/: .gitignore  Cargo.toml  about.hbs  about.toml
native/yaha_native/: Cargo.toml  build.rs
native/yaha_native/src/: binding.rs  context.rs  interop.rs  lib.rs  primitives.rs
perf/PerformanceCheck/: PerformanceCheck.csproj  Program.cs
src/YetAnotherHttpHandler/: .gitignore  Directory.Build.props  Directory.Build.targets  HttpVersionShim.cs  InteropExtensions.cs  MonoPInvokeCallback.cs  NativeHttpHandlerCore.cs  NativeLibraryWrapper.cs  NativeMethods.Uwp.g.cs  NativeMethods.g.cs  NativeMethodsFuncPtr.g.cs  NativeRuntime.cs  RequestContext.cs  ResponseContext.cs  ThrowHelper.cs  TrailingHeadersShim.cs  UnsafeUtilities.cs  UriHelper.cs  Utf8Strings.cs  YahaEventSource.cs  YahaSafeHandles.cs  YetAnotherHttpHandler.Unity.asmdef  YetAnotherHttpHandler.cs  YetAnotherHttpHandler.csproj  YetAnotherHttpHttpContent.cs  package.json
src/YetAnotherHttpHandler.Dependencies/: README.md  package.json
src/YetAnotherHttpHandler.Unity/: .gitignore
src/YetAnotherHttpHandler.Unity.Dependencies/: README.md  YetAnotherHttpHandler.Unity.Dependencies.csproj
src/YetAnotherHttpHandler.Unity.Dependencies.Sync/: Program.cs  YetAnotherHttpHandler.Unity.Dependencies.Sync.csproj
src/YetAnotherHttpHandler.Unity/Assets/: NuGet.config  packages.config
src/YetAnotherHttpHandler.Unity/ProjectSettings/: PackageManagerSettings.asset  ProjectSettings.asset
src/YetAnotherHttpHandler/Plugins/: README.md
src/YetAnotherHttpHandler/Shims/: Http2StreamException.cs  HttpVersionShim.cs  MonoPInvokeCallback.cs  TrailingHeadersShim.cs
test/YetAnotherHttpHandler.Packaging.Test/: LoadLibraryFromPackageTest.cs  README.md  YetAnotherHttpHandler.Packaging.Test.csproj
test/YetAnotherHttpHandler.StandaloneTestServer/: Program.cs  YetAnotherHttpHandler.StandaloneTestServer.csproj  appsettings.json
test/YetAnotherHttpHandler.StandaloneTestServer/Properties/: launchSettings.json
test/YetAnotherHttpHandler.Test/: BackPressureTest.cs  ClientCertificateTest.cs  Http1Test.cs  Http2ClearTextTest.cs  Http2Test.cs  Http2TestBase.cs  ITestServerBuilder.cs  NativeLibraryResolver.cs  NativeMethodsTest.cs  StreamExtensions.cs  StressTest.cs  TestServerForHttp1.cs  TestServerForHttp1AndHttp2.cs  TestServerForHttp2.cs  TimeoutTestBase.cs  UdsTest.cs  UnitTest1.cs  UriHelperTest.cs  UseTestServerBase.cs  Usings.cs  VersionNegotiationTest.cs  YahaEventListener.cs  YetAnotherHttpHandler.Test.csproj  YetAnotherHttpHandlerTest.cs
test/YetAnotherHttpHandler.Test/Helpers/: NativeLibraryResolver.cs  OSSkipConditionAttribute2.cs  TestOutputLoggerProvider.cs  TestServerHelper.cs  TestWebAppServer.cs  ThreadEnumerator.cs
test/YetAnotherHttpHandler.Test/Properties/: launchSettings.json
test/YetAnotherHttpHandler.Unity.Test/: .gitignore
test/certs/: README.md  client.conf  client.crt  client.csr  client.key  client.pfx  client_unknown.conf  client_unknown.crt  client_unknown.csr  client_unknown.key  client_unknown.pfx  localhost.crt  localhost.key  localhost.pfx  localhost.srl
(+38 files in other folders)
