[package]
name = "yaha_native"
version = "1.0.0"
edition = "2021"
license = "MIT"
publish = false

[package.metadata.winres]
ProductName = "YetAnotherHttpHandler"
FileDescription = "Native implementation for YetAnotherHttpHandler"
OriginalFilename = "Cysharp.Net.Http.YetAnotherHttpHandler.Native.dll"
LegalCopyright = "Copyright © Cysharp, Inc."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[build-dependencies]
csbindgen = "1.9.1"
winres = "0.1.12"

[dependencies]
h2 = { version = "0.4.5" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10" }
hyper = { version = "1.3.1", features = ["client", "http1", "http2"] }
hyper-rustls = { optional = true, version = "0.26.0", default-features = false, features = [
    "webpki-tokio",
    "http1",
    "http2",
    "tls12",
    "logging",
    "webpki-roots"
] }
rustls = { optional = true, version = "0.22.4" }
rustls-pemfile = { optional = true, version = "2.1.2" }
hyper-tls = { optional = true, version = "0.6.0" }
hyper-util = { version = "0.1.5", features = ["client", "http1", "http2", "client-legacy"] }
http-body-util = "0.1.1"
tokio-stream = "0.1.15"
futures-channel = "0.3.30"
futures-util = "0.3.30"
hyperlocal = "0.9.1"

[features]
default = [ "rustls" ]
rustls = [ "hyper-rustls", "dep:rustls", "rustls-pemfile" ]
native = [ "hyper-tls" ]

[profile.dev]
strip = true

[profile.release]
strip = true

